2019-10-08  Sam Varshavchik  <mrsam@courier-mta.com>

	* includes/x/w/input_field_lock.H: Implement discrete input_lock
	and const_input_lock objects.

2019-09-29  Sam Varshavchik  <mrsam@courier-mta.com>

	* color_picker: Optionally adjust the colors' alpha channel.

2019-09-28  Sam Varshavchik  <mrsam@courier-mta.com>

	* Add image_color as a color_arg option, use an image for a
	background color.

2019-09-25  Sam Varshavchik  <mrsam@courier-mta.com>

	* file_dialog: clean the filename field after closing the dialog
	successfully.

	* Add create_ok2_cancel_dialog.

	* remove_item() did not work correctly in a combo-box.

2019-09-22  Sam Varshavchik  <mrsam@courier-mta.com>

	* input_field/input_field.C: add validate_modified(); do not
	validate disabled fields.
	Add optional parameter to set() that specifies the set value's
	validation status.

2019-09-21  Sam Varshavchik  <mrsam@courier-mta.com>

	* book layout manager: implement initial invocation of on_opened()
	callback.

	* focus/focusable.C: add IN_THREAD overloads for various focusable
	methods. Implement an optional ok_if_not_possible to request_focus().

2019-09-19  Sam Varshavchik  <mrsam@courier-mta.com>

	* Fix race condition resulting in a deadlock if an exception
	gets thrown in main window's creator.

	* uixml: <container>s may also specify optional tooltips and
	context popup menus.

2019-09-18  Sam Varshavchik  <mrsam@courier-mta.com>

	* image_button: Implement IN_THREAD overloads for set_value().

2019-09-16  Sam Varshavchik  <mrsam@courier-mta.com>

	* Specify keyboard shortcuts for menus.

0.25

2019-07-07  Sam Varshavchik  <mrsam@courier-mta.com>

	* Fix menu popup visibility.

2019-07-05  Sam Varshavchik  <mrsam@courier-mta.com>

	* Add creators lambda map to uielements.

2019-07-04  Sam Varshavchik  <mrsam@courier-mta.com>

	* Generate border containers using the theme file.

	* Generate page containers using the theme file.
